--- a/Templates/show_event.html
+++ b/Templates/show_event.html
@@ -1,3 +1,21 @@
-<h2>Show Event</h2>
-	
-{{message}}
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-3 box"></div>
+        <div class="col-sm-3 box"></div>
+        <div class="col-sm-3 box"></div>
+        <div class="col-sm-3 box"></div>
+    </div>
+    <div class="row">
+        <div class="col-sm-3 box"></div>
+        <div class="col-sm-3 box"></div>
+        <div class="col-sm-3 box"></div>
+        <div class="col-sm-3 box"></div>
+    </div>
+
+
+    <!-- <div class="flex-container">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>  
+      </div> -->
+</div>
