--- a/Css/style.css
+++ b/Css/style.css
@@ -11,8 +11,8 @@
   }
 
   .box{
-    background-color: #853333;
-    border:2px solid white;
+    background-color: #cccccc;
+    border:2px solid #853333;
  height:280px;
     padding: 20px;
   }
