--- a/Css/style.css
+++ b/Css/style.css
@@ -12,7 +12,7 @@
 
   .box{
     background-color: #cccccc;
-    border:2px solid #853333;
+    border:2px solid white;
  height:280px;
     padding: 20px;
   }
