--- a/Templates/show_event.html
+++ b/Templates/show_event.html
@@ -1,21 +1,85 @@
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-sm-3 box"></div>
-        <div class="col-sm-3 box"></div>
-        <div class="col-sm-3 box"></div>
-        <div class="col-sm-3 box"></div>
-    </div>
-    <div class="row">
-        <div class="col-sm-3 box"></div>
-        <div class="col-sm-3 box"></div>
-        <div class="col-sm-3 box"></div>
-        <div class="col-sm-3 box"></div>
-    </div>
+<div class="container-fluid"  style="padding-top:130px;padding-left:40px;">
+    
+    <table class="table table responsive" style="height:80%">
+        <tr>
+           
+            <td class="col-sm-8 box1" style="vertical-align:middle;">
+                <table class="table box-shadow--6dp" style="margin-bottom:0;">
+<tr>
+    
+    <td style="font-weight:bold;">Name :</td>
+    <td>Kush Kumar Singh</td>
+    <td style="font-weight:bold;">Father's Name :</td>
+    <td>Chhail Bihari Singh</td>
+</tr>
+<tr><td style="font-weight:bold;">Date of Birth :</td>
+    <td>08/03/1969</td>
+    <td style="font-weight:bold;">Pan :</td>
+    <td>DYNPS2171E</td>
+</tr>
+                </table>
+            </td>
+            <td class="col-sm-4 box" style="padding:4px 4px 4px 30px">
+                <img class="box-shadow--6dp docs" src="Images/B5184114_PAN.jpeg" alt="PAN Card" height="145" width="300">
+            </td>
+        </tr>
+        <tr>
+            <td class="col-sm-8 box2" style="vertical-align:middle;">
+                <table class="table box-shadow--6dp table-scroll" style="margin-bottom:0;">
+                    <tr><td style="font-weight:bold;">Name :</td><td>Kush Kumar Singh</td>
+                        <td style="font-weight:bold;">Spouse Name :</td><td>Chhail Bihari Singh</td>
+                    </tr>
+                    <tr><td style="font-weight:bold;">Address :</td><td>Valakulam, Kerala</td>
+                        <td style="font-weight:bold;">Date of Birth :</td><td>08/03/1969</td>
+                        
+                    </tr>
+                    <tr><td style="font-weight:bold;">Passport :</td><td>DYNPS2171E</td>
+                        <td style="font-weight:bold;">Date of Issue :</td><td>08/03/1969</td>
+                        
+                    </tr>
+                    <tr>
+                        <td style="font-weight:bold;">Date of Expiry :</td><td>08/03/1969</td>
+                        <td>&nbsp;</td><td>&nbsp;</td>
+                    </tr>
+                                    </table>
 
+            </td>
+            <td class="col-sm-4 box" style="padding:4px 4px 4px 30px">
+                <img class="box-shadow--6dp docs" src="Images/B6004122_P.jpeg" alt="Passport"height="145" width="300" >
+            </td>
+        </tr>
+        <tr>
+            <td class="col-sm-8 box3" style="vertical-align:middle;">
+                <table class="table box-shadow--6dp" style="margin-bottom:0;">
+                    <tr><td style="font-weight:bold;">Name :</td><td>Kush Kumar Singh</td>
+                        <td style="font-weight:bold;">Address :</td><td>Chhail Bihari Singh</td>
+                    </tr>
+                    <tr><td style="font-weight:bold;">Date of Birth :</td><td>08/03/1969</td>
+                        <td style="font-weight:bold;">Voter ID :</td><td>DYNPS2171E</td>
+                    </tr>
+                                    </table>
 
-    <!-- <div class="flex-container">
-        <div>1</div>
-        <div>2</div>
-        <div>3</div>  
-      </div> -->
+            </td>
+            <td class="col-sm-4 box" style="padding:4px 4px 4px 30px">
+                <img class="box-shadow--6dp docs" src="Images/B4663985_V.jpeg" alt="Voter ID" height="145" width="300">
+            </td>
+        </tr>
+        <tr>
+            <td class="col-sm-8 box4" style="vertical-align:middle;">
+                <table class="table box-shadow--6dp" style="margin-bottom:0;">
+                    <tr><td style="font-weight:bold;">Name :</td><td>Kush Kumar Singh</td>
+                        <td style="font-weight:bold;">Address :</td><td>Chhail Bihari Singh</td>
+                    </tr>
+                    <tr><td style="font-weight:bold;">Date of Birth :</td><td>08/03/1969</td>
+                        <td style="font-weight:bold;">Voter ID :</td><td>DYNPS2171E</td>
+                    </tr>
+                                    </table>
+            </td>
+            <td class="col-sm-4 box" style="padding:4px 4px 4px 30px">
+                <img class="box-shadow--6dp docs" src="Images/B5184114_PAN.jpeg" alt="Adhar Card" height="145" width="300">
+            </td>
+        </tr>
+    </table>
+
+   
 </div>
