--- a/Css/style.css
+++ b/Css/style.css
@@ -10,9 +10,69 @@
     font-size: 30px;
   }
 
-  .box{
-    background-color: #cccccc;
-    border:2px solid white;
- height:280px;
-    padding: 20px;
+  .box1{
+    background-color: #b8e1d0;
+    border:5px solid white;
+  height:150px;
+    padding: 1%; 
+  }
+
+  
+  .box2{
+    background-color: #acdcc8;
+    border:5px solid white;
+  height:150px;
+    padding: 1%; 
+  }
+  
+  .box3{
+    background-color: #a0d7c0;
+    border:5px solid white;
+  height:150px;
+    padding: 1%; 
+  }
+  .box4{
+    background-color: #94d2b8;
+    border:5px solid white;
+  height:150px;
+    padding: 1%; 
+  }
+  /* .header{
+    widows: 100%;
+    height:50px;
+    background-color: #333;
+    margin-bottom: 10px;;
+  } */
+
+  header{
+    width: 100%;
+    padding: 100px 0;
+    background-color: #333;
+    border-bottom: 1px solid #e1e1e1;
+    /* animation magic */
+    transition: all 0.4s ease-in-out;
+    -webkit-transition: all 0.4s ease-in-out;
+    -moz-transition: all 0.4s ease-in-out ;
+    z-index: 9999;
+    /* top: 0; */
+    position: fixed;
+    padding-bottom:10px;
+  }
+  .shrink{
+    padding: 15px 0;
+  }
+  .box-shadow--6dp {
+    box-shadow: 0 6px 10px 0 rgba(0, 0, 0, .14), 0 1px 18px 0 rgba(0, 0, 0, .12), 0 3px 5px -1px rgba(0, 0, 0, .2)
+}
+  
+  .docs{
+    border:5px solid white;
+  }
+  .label{
+    font-weight:bold;
+  }
+
+  .table-scroll{
+    overflow-y: scroll;
+    height:100px;
   }
