--- a/Templates/show_event.html
+++ b/Templates/show_event.html
@@ -2,8 +2,27 @@
     
     <table class="table table responsive" style="height:80%">
         <tr>
-           
             <td class="col-sm-8 box1" style="vertical-align:middle;">
+                <table class="table box-shadow--6dp" style="margin-bottom:0;">
+                    <tr><td style="font-weight:bold;">Name :</td><td>Kush Kumar Singh</td>
+                        <td style="font-weight:bold;">Gender :</td><td>Male</td>
+                    
+                    </tr>
+                    <tr><td style="font-weight:bold;">Date of Birth :</td><td>08/03/1969</td>
+                        <td style="font-weight:bold;">PAN :</td><td>DYNPS2171E</td>  
+                    </tr>
+                    <tr><td style="font-weight:bold;">Mother's Name :</td><td>Nitu Bihari Singh</td>
+                        <td style="font-weight:bold;">Father/Spouse Name :</td><td>Chhail Bihari Singh</td>
+                    </tr>
+                                    </table>
+            </td>
+            <td class="col-sm-4 box" style="padding:4px 4px 4px 30px">
+                <img class="box-shadow--6dp docs" src="Images/applicationFrm.png" alt="Application Form" height="145" width="300">
+            </td>
+        </tr>
+        <tr>
+           
+            <td class="col-sm-8 box2" style="vertical-align:middle;">
                 <table class="table box-shadow--6dp" style="margin-bottom:0;">
 <tr>
     
@@ -14,7 +33,7 @@
 </tr>
 <tr><td style="font-weight:bold;">Date of Birth :</td>
     <td>08/03/1969</td>
-    <td style="font-weight:bold;">Pan :</td>
+    <td style="font-weight:bold;">PAN :</td>
     <td>DYNPS2171E</td>
 </tr>
                 </table>
@@ -24,21 +43,22 @@
             </td>
         </tr>
         <tr>
-            <td class="col-sm-8 box2" style="vertical-align:middle;">
-                <table class="table box-shadow--6dp table-scroll" style="margin-bottom:0;">
+            <td class="col-sm-8 box3" style="vertical-align:middle;">
+                <table class="table box-shadow--6dp table-scroll" style="margin-bottom:0;height:100px;overflow-y:scroll;">
                     <tr><td style="font-weight:bold;">Name :</td><td>Kush Kumar Singh</td>
-                        <td style="font-weight:bold;">Spouse Name :</td><td>Chhail Bihari Singh</td>
-                    </tr>
-                    <tr><td style="font-weight:bold;">Address :</td><td>Valakulam, Kerala</td>
                         <td style="font-weight:bold;">Date of Birth :</td><td>08/03/1969</td>
+                       
+                    </tr>
+                    <tr><td style="font-weight:bold;">Mother's Name :</td><td>Nitu Bihari Singh</td>
+                        <td style="font-weight:bold;">Father's/Spouse Name :</td><td>Chhail Bihari Singh</td>
                         
                     </tr>
-                    <tr><td style="font-weight:bold;">Passport :</td><td>DYNPS2171E</td>
+                    <!-- <tr><td style="font-weight:bold;">Passport :</td><td>DYNPS2171E</td>
                         <td style="font-weight:bold;">Date of Issue :</td><td>08/03/1969</td>
                         
-                    </tr>
+                    </tr> -->
                     <tr>
-                        <td style="font-weight:bold;">Date of Expiry :</td><td>08/03/1969</td>
+                        <td style="font-weight:bold;">Address :</td><td>Valakulam, Kerala</td>
                         <td>&nbsp;</td><td>&nbsp;</td>
                     </tr>
                                     </table>
@@ -49,13 +69,17 @@
             </td>
         </tr>
         <tr>
-            <td class="col-sm-8 box3" style="vertical-align:middle;">
+            <td class="col-sm-8 box4" style="vertical-align:middle;">
                 <table class="table box-shadow--6dp" style="margin-bottom:0;">
                     <tr><td style="font-weight:bold;">Name :</td><td>Kush Kumar Singh</td>
-                        <td style="font-weight:bold;">Address :</td><td>Chhail Bihari Singh</td>
+                        <td style="font-weight:bold;">Gender :</td><td>Male</td>
                     </tr>
                     <tr><td style="font-weight:bold;">Date of Birth :</td><td>08/03/1969</td>
-                        <td style="font-weight:bold;">Voter ID :</td><td>DYNPS2171E</td>
+                        <td style="font-weight:bold;">Father's Name :</td><td>Chhail Bihari Singh</td>
+                    </tr>
+                    <tr>
+                        <td style="font-weight:bold;">Address :</td><td>Valakulam, Kerala</td>
+                        <td>&nbsp;</td><td>&nbsp;</td>
                     </tr>
                                     </table>
 
@@ -64,21 +88,7 @@
                 <img class="box-shadow--6dp docs" src="Images/B4663985_V.jpeg" alt="Voter ID" height="145" width="300">
             </td>
         </tr>
-        <tr>
-            <td class="col-sm-8 box4" style="vertical-align:middle;">
-                <table class="table box-shadow--6dp" style="margin-bottom:0;">
-                    <tr><td style="font-weight:bold;">Name :</td><td>Kush Kumar Singh</td>
-                        <td style="font-weight:bold;">Address :</td><td>Chhail Bihari Singh</td>
-                    </tr>
-                    <tr><td style="font-weight:bold;">Date of Birth :</td><td>08/03/1969</td>
-                        <td style="font-weight:bold;">Voter ID :</td><td>DYNPS2171E</td>
-                    </tr>
-                                    </table>
-            </td>
-            <td class="col-sm-4 box" style="padding:4px 4px 4px 30px">
-                <img class="box-shadow--6dp docs" src="Images/B5184114_PAN.jpeg" alt="Adhar Card" height="145" width="300">
-            </td>
-        </tr>
+     
     </table>
 
    
