--- a/Css/style.css
+++ b/Css/style.css
@@ -1,59 +1,36 @@
-.flex-container {
-    display: flex;
-    background-color: DodgerBlue;
-  }
-  
-  .flex-container > div {
-    background-color: #f1f1f1;
-    margin: 10px;
-    padding: 20px;
-    font-size: 30px;
-  }
 
   .box1{
     background-color: #b8e1d0;
-    /* background-color: white;; */
-    border:5px solid white;
+       border:5px solid white;
   height:150px;
     padding: 1%; 
   }
 
   
   .box2{
-    /* background-color: #acdcc8; */
-    background-color: white;;
-    /* background-color: #b8e1d0; */
-    border:5px solid white;
+       background-color: white;;
+       border:5px solid white;
   height:150px;
     padding: 1%; 
   }
   
   .box3{
-    /* background-color: #a0d7c0; */
-    background-color: #b8e1d0;
-    /* background-color:white;  */
+      background-color: #b8e1d0;
     border:5px solid white;
   height:150px;
     padding: 1%; 
   }
   .box4{
-    /* background-color: #94d2b8; */
-    background-color:white;
-    /* background-color: #b8e1d0; */
-    border:5px solid white;
+        background-color:white;
+       border:5px solid white;
   height:150px;
     padding: 1%; 
   }
-  /* .header{
-    widows: 100%;
-    height:50px;
-    background-color: #333;
-    margin-bottom: 10px;;
-  } */
+  
 
   header{
     width: 100%;
-    padding: 100px 0;
+    /* padding: 10px 0; */
     background-color: #333;
     border-bottom: 1px solid #e1e1e1;
     /* animation magic */
@@ -64,16 +41,34 @@
     /* top: 0; */
     position: fixed;
     padding-bottom:10px;
+    color:#fff;
+    padding:20px;
+  }
+  .H3Class{
+    font-weight: bold;
+    margin-left:20px;
+    font-size:24px;
+    margin:5px;
   }
   .shrink{
-    padding: 15px 0;
+    padding: 5px;;
+   
   }
   .box-shadow--6dp {
     box-shadow: 0 6px 10px 0 rgba(0, 0, 0, .14), 0 1px 18px 0 rgba(0, 0, 0, .12), 0 3px 5px -1px rgba(0, 0, 0, .2)
 }
   
   .docs{
-    border:5px solid white;
+    border:2px solid white;
+   
+  }
+  img {
+    transition: opacity .5s;
+    display: block;
+    width: 100%;
+  }
+  img:hover {
+    opacity: 0;
   }
   .label{
     font-weight:bold;
@@ -82,4 +77,335 @@
   .table-scroll{
     overflow-y: scroll;
     height:100px;
+  }
+
+  figure.zoom {
+    background-position: 50% 50%;
+    position: relative;
+    width: 350px;
+    overflow: hidden;
+    cursor: zoom-in;
+    border: 1px solid black;
+  }
+object{
+  border:1px solid black;   
+}
+
+  figure.zoom img:hover {
+    opacity: 0;
+  }
+  figure.zoom img {
+    transition: opacity .5s;
+    display: block;
+    width: 100%;
+    /* transform-origin: 0 0; */
+    /* transform-origin: center center; */
+    /* transition: transform .25s, visibility .25s ease-in; */
+  }
+  .zoom:hover ~ .myTable  
+  {
+    filter: blur(10px)
+  }
+  /* .zoom:hover {
+    transform: scale(1.2,2.5);
+  z-index: 9999;
+  box-shadow: 0 25px 60px rgba(0,0,0,.8);
+  } */
+
+
+  #dvPDF:hover { 
+    height:600px;
+    width:360px;
+  z-index: 9999;
+  position: absolute;
+  }
+
+   .zoom:hover {
+    /* height:200px;
+    width:360px; */
+    transform: scale(1.2,2);
+  z-index: 9999;
+  position: absolute;
+  box-shadow: 0 25px 60px rgba(0,0,0,.8);
+  }
+
+  .redColorText{
+    color:red;
+  }
+
+
+
+  /* For Show Workslist page  */
+  
+  
+  #tblWorklist .multi-steps > li.is-active:before, .multi-steps > li.is-active ~ li:before {
+    content: counter(stepNum);
+    font-family: inherit;
+    font-weight: 700;
+  }
+  #tblWorklist .multi-steps > li.is-active:after, .multi-steps > li.is-active ~ li:after {
+    background-color: #ededed;
+  }
+  
+  #tblWorklist .multi-steps {
+    display: table;
+    table-layout: fixed;
+    width: 100%;
+  }
+  #tblWorklist .multi-steps > li {
+    counter-increment: stepNum;
+    text-align: center;
+    display: table-cell;
+    position: relative;
+    color: tomato;
+  }
+  #tblWorklist .multi-steps > li:before {
+    content: '\f00c';
+    content: '\2713;';
+    content: '\10003';
+    content: '\10004';
+    content: '\2713';
+    display: block;
+    margin: 0 auto 4px;
+    background-color: #fff;
+    width: 36px;
+    height: 36px;
+    line-height: 32px;
+    text-align: center;
+    font-weight: bold;
+    border-width: 2px;
+    border-style: solid;
+    border-color: tomato;
+    border-radius: 50%;
+  }
+  #tblWorklist  .multi-steps > li:after {
+    content: '';
+    height: 2px;
+    width: 100%;
+    background-color: tomato;
+    position: absolute;
+    top: 16px;
+    left: 56%;
+    z-index: 0;
+  }
+  #tblWorklist .multi-steps > li:last-child:after {
+    display: none;
+  }
+  #tblWorklist .multi-steps > li.is-active:before {
+    background-color: #fff;
+    border-color: tomato;
+  }
+  #tblWorklist .multi-steps > li.is-active ~ li {
+    color: #808080;
+  }
+  #tblWorklist  .multi-steps > li.is-active ~ li:before {
+    background-color: #ededed;
+    border-color: #ededed;
+  }
+  
+ 
+
+
+  
+
+  /*shivani  Global CSS, you probably don't need that */
+
+.clearfix:after {
+  clear: both;
+  content: "";
+  display: block;
+  height: 0;
+}
+
+/* .container {
+font-family: 'Lato', sans-serif;
+width: 1000px;
+margin: 0 auto;
+} */
+
+.wrapper {
+display: table-cell;
+height: 400px;
+vertical-align: middle;
+}
+
+.nav {
+margin-top: 40px;
+}
+
+.pull-right {
+float: right;
+}
+
+a, a:active {
+color: #333;
+text-decoration: none;
+}
+
+a:hover {
+color: #999;
+}
+
+/* Breadcrups CSS */
+
+.arrow-steps .step {
+font-size: 14px;
+text-align: center;
+color: #666;
+cursor: default;
+margin: 0 3px;
+padding: 10px 10px 10px 30px;
+min-width: 180px;
+float: left;
+position: relative;
+background-color: #d9e3f7;
+-webkit-user-select: none;
+-moz-user-select: none;
+-ms-user-select: none;
+user-select: none; 
+transition: background-color 0.2s ease;
+}
+
+.arrow-steps .step:after,
+.arrow-steps .step:before {
+content: " ";
+position: absolute;
+top: 0;
+right: -17px;
+width: 0;
+height: 0;
+border-top: 19px solid transparent;
+border-bottom: 17px solid transparent;
+border-left: 17px solid #d9e3f7;	
+z-index: 2;
+transition: border-color 0.2s ease;
+}
+
+.arrow-steps .step:before {
+right: auto;
+left: 0;
+border-left: 17px solid #fff;	
+z-index: 0;
+}
+
+.arrow-steps .step:first-child:before {
+border: none;
+}
+
+.arrow-steps .step:first-child {
+border-top-left-radius: 4px;
+border-bottom-left-radius: 4px;
+}
+
+.arrow-steps .step span {
+position: relative;
+}
+
+.arrow-steps .step span:before {
+opacity: 0;
+content: "✔";
+position: absolute;
+top: -2px;
+left: -20px;
+}
+
+.arrow-steps .step.done span:before {
+opacity: 1;
+-webkit-transition: opacity 0.3s ease 0.5s;
+-moz-transition: opacity 0.3s ease 0.5s;
+-ms-transition: opacity 0.3s ease 0.5s;
+transition: opacity 0.3s ease 0.5s;
+}
+
+.arrow-steps .step.current {
+color: #fff;
+background-color: #23468c;
+}
+
+.arrow-steps .step.current:after {
+border-left: 17px solid #23468c;	
+}
+
+
+
+
+
+
+.arrow-steps1 .step1 {
+  
+  font-size: 14px;
+  text-align: center;
+  color: #666;
+  cursor: default;
+  margin: 0 3px;
+  padding: 10px 10px 10px 30px;
+  min-width: 180px;
+  float: left;
+  position: relative;
+  background-color: #d9e3f7;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none; 
+  transition: background-color 0.2s ease;
+  }
+  
+  /* .arrow-steps1 .step1:after,
+  .arrow-steps1 .step1:before {
+  content: " ";
+  position: absolute;
+  top: 0;
+  right: -17px;
+  width: 0;
+  height: 0;
+  border-top: 19px solid transparent;
+  border-bottom: 17px solid transparent;
+  border-left: 17px solid #d9e3f7;	
+  z-index: 2;
+  transition: border-color 0.2s ease;
+  } */
+  
+  .arrow-steps1 .step1:before {
+  right: auto;
+  left: 0;
+  border-left: 17px solid #fff;	
+  z-index: 0;
+  }
+  
+  .arrow-steps1 .step1:first-child:before {
+  border: none;
+  }
+  
+  /* .arrow-steps1 .step1:first-child {
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  } */
+  
+  .arrow-steps1 .step1 span {
+  position: relative;
+  }
+  
+  /* .arrow-steps1 .step1 span:before {
+  opacity: 0;
+  /* content: "✔"; */
+  position: absolute;
+  top: -2px;
+  left: -20px;
+  } */
+  
+  /* .arrow-steps1 .step1.done span:before {
+  opacity: 1;
+  -webkit-transition: opacity 0.3s ease 0.5s;
+  -moz-transition: opacity 0.3s ease 0.5s;
+  -ms-transition: opacity 0.3s ease 0.5s;
+  transition: opacity 0.3s ease 0.5s;
+  } */
+  
+  .arrow-steps1 .step1.current {
+  color: #fff;
+  background-color: #23468c;
+  }
+  
+  .arrow-steps1 .step1.current:after {
+  border-left: 17px solid #23468c;	
   }
