--- a/Css/style.css
+++ b/Css/style.css
@@ -1,4 +1,7 @@
-
+section {
+  display: -webkit-flex;
+  display: flex;
+}
   .box1{
     background-color: #b8e1d0;
        border:5px solid white;
@@ -26,23 +29,39 @@
   height:150px;
     padding: 1%; 
   }
-  
-
+  .objWrapper{
+    border:1px solid black; 
+    width:400px;
+  }
+#myTable td{
+  white-space: nowrap;overflow: hidden;text-overflow: ellipsis;max-width:200px;
+}
+#myTable td:hover{
+  overflow: visible;
+}
+.tdValue{
+  min-width:180px;
+  /* text-align: right; */
+  /* width:230px; */
+}
+.form-control{
+  width: 230px;; 
+}
   header{
     width: 100%;
     /* padding: 10px 0; */
     background-color: #333;
     border-bottom: 1px solid #e1e1e1;
     /* animation magic */
-    transition: all 0.4s ease-in-out;
+    /* transition: all 0.4s ease-in-out;
     -webkit-transition: all 0.4s ease-in-out;
     -moz-transition: all 0.4s ease-in-out ;
-    z-index: 9999;
+    z-index: 9999; */
     /* top: 0; */
-    position: fixed;
+    /* position: fixed; */
     padding-bottom:10px;
     color:#fff;
-    padding:20px;
+    padding: 5px;;
   }
   .H3Class{
     font-weight: bold;
@@ -55,12 +74,37 @@
    
   }
   .box-shadow--6dp {
-    box-shadow: 0 6px 10px 0 rgba(0, 0, 0, .14), 0 1px 18px 0 rgba(0, 0, 0, .12), 0 3px 5px -1px rgba(0, 0, 0, .2)
+    box-shadow: 0 6px 10px 0 rgba(0, 0, 0, .14), 0 1px 18px 0 rgba(0, 0, 0, .12), 0 3px 5px -1px rgba(0, 0, 0, .2);
+    margin-bottom:0;
+  }
+.clickable{
+  cursor: pointer;   
 }
-  
+/* for slim scroll in bootstrap popup */
+#dvAppFrm{
+  width:100% !important;
+}
+#dvHolderObject{
+  border:2px solid white;
+  width:100% !important;
+  overflow:hidden;
+  height:490px;
+}
+
+.panel-heading span {
+margin-top: -20px;
+font-size: 15px;
+}
   .docs{
     border:2px solid white;
    
+  }
+  .underline{
+    position: absolute;
+    font-size: 14px;
+    margin-left:57%;
+    text-decoration: underline;
+    font-weight: bold;;
   }
   img {
     transition: opacity .5s;
@@ -111,13 +155,24 @@ object{
   z-index: 9999;
   box-shadow: 0 25px 60px rgba(0,0,0,.8);
   } */
-
+#tabDrop{
+  margin-top:16px;
+  transform: scale(0.6);
+}
 
   #dvPDF:hover { 
-    height:600px;
-    width:360px;
+    height:530px;
+    width:395px;
   z-index: 9999;
   position: absolute;
+  }
+  
+  #dvPDFKYC:hover { 
+    height:380px;
+    width:400px;
+  z-index: 9999;
+  position: absolute;
+  box-shadow: 0 25px 60px rgba(0,0,0,.8);
   }
 
    .zoom:hover {
@@ -133,11 +188,13 @@ object{
     color:red;
   }
 
-
+  
 
   /* For Show Workslist page  */
   
-  
+  #dvCoAppData{
+    height:200px;
+  }
   #tblWorklist .multi-steps > li.is-active:before, .multi-steps > li.is-active ~ li:before {
     content: counter(stepNum);
     font-family: inherit;
@@ -265,7 +322,12 @@ background-color: #d9e3f7;
 user-select: none; 
 transition: background-color 0.2s ease;
 }
-
+.arrow-steps{
+  margin-left: 5%;;
+}
+.arrow-steps1{
+  margin-left: 5%;;
+}
 .arrow-steps .step:after,
 .arrow-steps .step:before {
 content: " ";
@@ -387,7 +449,7 @@ border-left: 17px solid #23468c;
   
   /* .arrow-steps1 .step1 span:before {
   opacity: 0;
-  /* content: "✔"; */
+  /* content: "✔"; 
   position: absolute;
   top: -2px;
   left: -20px;
@@ -409,3 +471,57 @@ border-left: 17px solid #23468c;
   .arrow-steps1 .step1.current:after {
   border-left: 17px solid #23468c;	
   }
+
+  .i_Worklist{
+    color: gray;
+    display: flex;
+    justify-content: normal;
+    align-items: center;
+    transform: scale(1.3);
+   
+    margin-top: 12px;
+  }
+  .pagination li:hover{
+    cursor: pointer;
+}
+  
+ .collapse{
+    display: none;
+  }
+  .collapse .in{
+    display: table-row;
+  } 
+  #table-id td{
+   
+    text-align: center;
+  }
+.titleCls{
+  padding:2px;
+  /* font-weight:bold; */
+}
+
+.popover{
+  min-width: 150px;
+}
+/* input.ng-invalid {
+  border: 1px solid red;
+} */
+
+/* new kyc display page
+ */
+
+ #dvPDFnewKYC{
+  height:280px;
+  width:450px;
+box-shadow: 0 10px 10px rgba(0,0,0,.8);
+}
+#objPassport{
+  height:330px;
+  width:470px;
+box-shadow: 0 10px 10px rgba(0,0,0,.8);
+}
+.objWrapperNew{
+  border:1px solid black; 
+  width:472px;
+  
+}
